--- a/2016-week-24.Rmd
+++ b/2016-week-24.Rmd
@@ -1,10 +1,30 @@
-library(tidyverse)
-library(readxl)
-d <- read_excel("data/2016-week-24-women-in-the-workplace.xlsx")
+---
+title: '2016 week 24: Microsoft gender disparities'
+output: github_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE)
+library(ggplot2)
+library(tidyr)
+library(stringr)
+library(dplyr)
+```
+
+## Data exploration
+
+```{r}
+d <- readxl::read_excel("data/2016-week-24-women-in-the-workplace.xlsx")
 d <- d %>% 
     mutate(Level = factor(Level, levels = unique(Level)), 
         Year = factor(Year))
 
+str(d)
+```
+
+The data consist of the gender distribution of Microsoft employees at 6 job categories in 2012 and 2015. 
+
+```{r}
 ggplot(d, aes(x = Year, y = Female)) + 
     geom_line(aes(color = Level, group = Level)) + 
     geom_hline(yintercept = 0.5)
@@ -23,7 +43,11 @@ d %>%
         geom_line(aes(color = Level, group = interaction(Level, Gender), linetype = Gender)) + 
         geom_hline(yintercept = 0.5) + 
         ylim(0:1)
+```
 
+More employees are male at every job category in both years. The difference grows larger with the seniority of the position. The female fraction increased from 2012 to 2017 in all cases, albeit modestly. The maximum female representation is 45% in entry level positions in 2015 and the minimum is a staggering 17% in the highest-level executive positions in 2015 (up from 16% in 2012). 
+
+```{r}
 ggplot(d, aes(x = Year, y = Female)) + 
     geom_col(aes(fill = Level), position = "dodge") + 
     geom_hline(yintercept = 0.5)
@@ -49,8 +73,15 @@ d %>%
     ggplot(aes(x = Gender, y = Percent, fill = Year)) + 
     geom_col(position = "dodge") + 
     geom_hline(yintercept = 0.5) + 
-    facet_wrap(~ Level) + ylim(c(0, 1))
+    facet_wrap(~ Level) + ylim(c(0, 1)) + 
+    ggtitle("Gender disparities in employment at Microsoft")
+```
 
+I like this last plot, which clearly indicates the stark differences in gender representation at every level of employment. It shows the improvements that were made between 2012 and 2015 in the context of those large gender differences, so the viewer can see that though progress was made, it is quite small compared to the differences that exist. 
+
+While I like the plot, it is relatively complex and busy for showing just a few numbers, so I feel that a more efficient display is possible. 
+
+```{r}
 d %>% 
     mutate(M = Male-0.5, Fe = Female-0.5) %>% 
     tidyr::gather(Gender, Share, M, Fe) %>% 
@@ -76,23 +107,31 @@ d %>%
     geom_col(aes(fill = Year), position = "dodge") + 
     ylab("Number of men employed at Microsoft for every woman") + 
     xlab(NULL)
+```
 
+I really like this transformation of the data into number of men employed for every woman, which puts into quite concrete terms the scale of the differences. Before, we could observe a large gap in the percentages for each gender, but the meaning of an 80:20 ratio is not as concrete to me as imagining a meeting of 5 people where 4 are men and 1 is a woman. 
+
+This transformation also cuts down the number of bars to be shown by half (though to be fair, you could also show just the percentages for one gender since the other is just the difference from 100). 
+
+```{r}
 # prettify
 d %>% 
     mutate(ManPerWoman = Male / Female, 
-        Level = stringr::str_replace(Level, " / ", " or "), 
-        Level = stringr::str_replace_all(Level, " ", "\n"),
+        Level = stringr::str_replace(Level, "Senior Vice President", "Senior\nVP"), 
+        Level = stringr::str_replace_all(Level, " /.*", " "),
+        Level = stringr::str_replace(Level, " ", "\n"), 
         Level = factor(Level, levels = unique(Level))) %>%
     ggplot(aes(x = Level, y = ManPerWoman)) + 
         geom_col(aes(fill = Year), position = "dodge") + 
-        ylab("Number of men employed per woman") + 
+        geom_hline(yintercept = 1) +
+        ylab("# of men employed per woman") + 
         xlab(NULL) + 
         ggtitle("Gender inequality at Microsoft") + 
-        labs(subtitle = paste("Microsoft employs more men than women in every job category",
+        labs(subtitle = paste("Microsoft employs more men than women in every job category,",
             "especially at the highest levels, though modest improvements were",
             "made between 2012 and 2015", sep = "\n"), fill = NULL) + 
-    theme(legend.position=c(0.07, 0.9), 
-        # legend.box.background = element_rect(fill = "transparent"))
-        legend.box.just = "top",
-        legend.box.background = element_rect(fill = alpha("red", 0.5)))
-        
+        scale_fill_manual(values = c("#999999", "#4d4d4d"))
+
+ggsave("out/2016-week-24.png", width = 5, height = 4, units = "in", dpi = 303)
+
+```
