--- a/2017-week-28.md
+++ b/2017-week-28.md
@@ -32,3 +32,13 @@ Country and team summaries
     ## Joining, by = c("Year", "Country")
 
 ![](2017-week-28_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-4-1.png)![](2017-week-28_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-4-2.png)
+
+I like that graph a lot. I also tried drawing steps instead of lines, because wins are discrete events. This has its merits but I think the zig-zag pattern is distracting.
+
+![](2017-week-28_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-5-1.png)
+
+Then I wondered if representing the wins with points would more effectively show the changing win patterns.
+
+![](2017-week-28_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-6-1.png)
+
+I think this is a pretty effective way of showing it too.
