Add links to Makeover Monday website and to the data sources to give credit appropriately.

--- a/2016-week-24.Rmd
+++ b/2016-week-24.Rmd
@@ -11,6 +11,8 @@ library(stringr)
 library(dplyr)
 ```
 
+It's week 24 of [Makeover Monday](http://www.makeovermonday.co.uk/data/) 2016 edition. The data this week is about gender disparities in the workplace and comes from [McKinsey](http://www.mckinsey.com/business-functions/organization/our-insights/women-in-the-workplace).
+
 ## Data exploration
 
 ```{r}
