--- a/2016-week-24.md
+++ b/2016-week-24.md
@@ -1,6 +1,8 @@
 2016 week 24: Microsoft gender disparities
 ================
 
+It's week 24 of [Makeover Monday](http://www.makeovermonday.co.uk/data/) 2016 edition. The data this week is about gender disparities in the workplace and comes from [McKinsey](http://www.mckinsey.com/business-functions/organization/our-insights/women-in-the-workplace).
+
 Data exploration
 ----------------
 
@@ -12,20 +14,20 @@ Data exploration
 
 The data consist of the gender distribution of Microsoft employees at 6 job categories in 2012 and 2015.
 
-![](2016-week-24_files/figure-markdown_github/unnamed-chunk-2-1.png)![](2016-week-24_files/figure-markdown_github/unnamed-chunk-2-2.png)![](2016-week-24_files/figure-markdown_github/unnamed-chunk-2-3.png)
+![](2016-week-24_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-2-1.png)![](2016-week-24_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-2-2.png)![](2016-week-24_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-2-3.png)
 
 More employees are male at every job category in both years. The difference grows larger with the seniority of the position. The female fraction increased from 2012 to 2017 in all cases, albeit modestly. The maximum female representation is 45% in entry level positions in 2015 and the minimum is a staggering 17% in the highest-level executive positions in 2015 (up from 16% in 2012).
 
-![](2016-week-24_files/figure-markdown_github/unnamed-chunk-3-1.png)![](2016-week-24_files/figure-markdown_github/unnamed-chunk-3-2.png)![](2016-week-24_files/figure-markdown_github/unnamed-chunk-3-3.png)![](2016-week-24_files/figure-markdown_github/unnamed-chunk-3-4.png)![](2016-week-24_files/figure-markdown_github/unnamed-chunk-3-5.png)
+![](2016-week-24_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-3-1.png)![](2016-week-24_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-3-2.png)![](2016-week-24_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-3-3.png)![](2016-week-24_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-3-4.png)![](2016-week-24_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-3-5.png)
 
 I like this last plot, which clearly indicates the stark differences in gender representation at every level of employment. It shows the improvements that were made between 2012 and 2015 in the context of those large gender differences, so the viewer can see that though progress was made, it is quite small compared to the differences that exist.
 
 While I like the plot, it is relatively complex and busy for showing just a few numbers, so I feel that a more efficient display is possible.
 
-![](2016-week-24_files/figure-markdown_github/unnamed-chunk-4-1.png)![](2016-week-24_files/figure-markdown_github/unnamed-chunk-4-2.png)![](2016-week-24_files/figure-markdown_github/unnamed-chunk-4-3.png)
+![](2016-week-24_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-4-1.png)![](2016-week-24_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-4-2.png)![](2016-week-24_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-4-3.png)
 
 I really like this transformation of the data into number of men employed for every woman, which puts into quite concrete terms the scale of the differences. Before, we could observe a large gap in the percentages for each gender, but the meaning of an 80:20 ratio is not as concrete to me as imagining a meeting of 5 people where 4 are men and 1 is a woman.
 
 This transformation also cuts down the number of bars to be shown by half (though to be fair, you could also show just the percentages for one gender since the other is just the difference from 100).
 
-![](2016-week-24_files/figure-markdown_github/unnamed-chunk-5-1.png)
+![](2016-week-24_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-5-1.png)
