--- a/2017-week-27.md
+++ b/2017-week-27.md
@@ -1,31 +1,33 @@
 2017 week 27: German tourism
 ================
 
+It's week 27 of [Makeover Monday](http://www.makeovermonday.co.uk/data/) 2017 edition. The data this week is about tourism in Germany and comes from [statistik Berlin Brandenburg](https://www.statistik-berlin-brandenburg.de/grundlagen/tourismus-grafik.asp?Ptyp=260&Sageb=45000&creg=BBB&anzwer=5).
+
 summary by country of origin
 ----------------------------
 
-![](2017-week-27_files/figure-markdown_github/unnamed-chunk-2-1.png)![](2017-week-27_files/figure-markdown_github/unnamed-chunk-2-2.png)![](2017-week-27_files/figure-markdown_github/unnamed-chunk-2-3.png)
+![](2017-week-27_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-2-1.png)![](2017-week-27_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-2-2.png)![](2017-week-27_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-2-3.png)
 
 I started out just looking at the top and bottom few. Then I started showing all the data and just labeling the top and bottom few, which is way better.
 
-![](2017-week-27_files/figure-markdown_github/unnamed-chunk-3-1.png)![](2017-week-27_files/figure-markdown_github/unnamed-chunk-3-2.png)
+![](2017-week-27_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-3-1.png)![](2017-week-27_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-3-2.png)
 
 summary by district visiting
 ----------------------------
 
-![](2017-week-27_files/figure-markdown_github/unnamed-chunk-4-1.png)![](2017-week-27_files/figure-markdown_github/unnamed-chunk-4-2.png)
+![](2017-week-27_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-4-1.png)![](2017-week-27_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-4-2.png)
 
 Seasonal variation
 ------------------
 
-![](2017-week-27_files/figure-markdown_github/unnamed-chunk-5-1.png)![](2017-week-27_files/figure-markdown_github/unnamed-chunk-5-2.png)
+![](2017-week-27_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-5-1.png)![](2017-week-27_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-5-2.png)
 
 where do biggest visitors go
 ----------------------------
 
-![](2017-week-27_files/figure-markdown_github/unnamed-chunk-6-1.png)![](2017-week-27_files/figure-markdown_github/unnamed-chunk-6-2.png)![](2017-week-27_files/figure-markdown_github/unnamed-chunk-6-3.png)
+![](2017-week-27_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-6-1.png)![](2017-week-27_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-6-2.png)![](2017-week-27_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-6-3.png)
 
 where and when to go for most/fewest other tourists?
 ----------------------------------------------------
 
-![](2017-week-27_files/figure-markdown_github/unnamed-chunk-7-1.png)
+![](2017-week-27_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-7-1.png)
