--- a/2017-week-26.md
+++ b/2017-week-26.md
@@ -1,19 +1,21 @@
 2017 week 26: German car exports
 ================
 
+It's week 26 of [Makeover Monday](http://www.makeovermonday.co.uk/data/) 2017 edition. The data this week is about car production in Germany and comes from [VDA](https://www.vda.de/en/services/facts-and-figures.html).
+
 Data exploration
 ----------------
 
-![](2017-week-26_files/figure-markdown_github/unnamed-chunk-1-1.png)![](2017-week-26_files/figure-markdown_github/unnamed-chunk-1-2.png)
+![](2017-week-26_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-1-1.png)![](2017-week-26_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-1-2.png)
 
     ## `geom_smooth()` using method = 'loess'
 
-![](2017-week-26_files/figure-markdown_github/unnamed-chunk-1-3.png)
+![](2017-week-26_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-1-3.png)
 
     ## `geom_smooth()` using method = 'loess'
 
-![](2017-week-26_files/figure-markdown_github/unnamed-chunk-1-4.png)
+![](2017-week-26_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-1-4.png)
 
     ## `geom_smooth()` using method = 'loess'
 
-![](2017-week-26_files/figure-markdown_github/unnamed-chunk-1-5.png)![](2017-week-26_files/figure-markdown_github/unnamed-chunk-1-6.png)![](2017-week-26_files/figure-markdown_github/unnamed-chunk-1-7.png)
+![](2017-week-26_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-1-5.png)![](2017-week-26_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-1-6.png)![](2017-week-26_files/figure-markdown_github-ascii_identifiers/unnamed-chunk-1-7.png)
