--- a/2017-week-28.md
+++ b/2017-week-28.md
@@ -1,6 +1,8 @@
 2017 week 28: Tour de France
 ================
 
+It's week 28 of [Makeover Monday](http://www.makeovermonday.co.uk/data/) 2017 edition. The data this week is about the Tour de France and comes from [Knoema](https://knoema.com/dvkiqwd/tour-de-france-statistics) and [wikipedia](https://en.wikipedia.org/wiki/Tour_de_France).
+
 Change over time
 ================
 
