--- a/2017-week-31.md
+++ b/2017-week-31.md
@@ -47,3 +47,5 @@ Countries of participants: ![](2017-week-31_files/figure-markdown_github/unnamed
 No country seems to dramatically dominate. It sort of looks like host countries do better, is that true?
 
 ![](2017-week-31_files/figure-markdown_github/unnamed-chunk-5-1.png)
+
+![](2017-week-31_files/figure-markdown_github/unnamed-chunk-6-1.png)
