--- a/2017-week-32.md
+++ b/2017-week-32.md
@@ -1,7 +1,7 @@
-2017 week 32: Toilets in India
+2017 week 32: Toilets in Indian schools
 ================
 
-It's week 31 of [Makeover Monday](http://www.makeovermonday.co.uk/data/) 2017. The data is about access to sanitation in India and comes from the [Annual Status of Education Report](http://www.asercentre.org/p/289.html).
+It's week 31 of [Makeover Monday](http://www.makeovermonday.co.uk/data/) 2017. The data is about access to sanitation in Indian schools and comes from the [Annual Status of Education Report](http://www.asercentre.org/p/289.html).
 
     ## Warning: Removed 18 rows containing missing values (geom_point).
 
@@ -17,15 +17,15 @@ It's week 31 of [Makeover Monday](http://www.makeovermonday.co.uk/data/) 2017. T
 
 ![](2017-week-32_files/figure-markdown_github/unnamed-chunk-1-2.png)
 
-In general there has been improvement in the percent of toilets that are working since 2010. In addition, the difference between all usable toilets and usable toilets for women has generally declined since then, meaning that the states are approaching parity between usable toilets for men and women.
+In general there has been improvement in the percent of toilets that are working since 2010. In addition, the difference between all usable toilets and usable toilets for girls has generally declined since then, meaning that the states are approaching parity between usable toilets for boys and girls.
 
 ![](2017-week-32_files/figure-markdown_github/unnamed-chunk-2-1.png)
 
-Looking just at the states with data for 2010 and 2016, almost every single state has improved the state of their toilets.
+Looking just at the states with data for 2010 and 2016, almost every single state has improved the state of their toilets in schools.
 
 ![](2017-week-32_files/figure-markdown_github/unnamed-chunk-3-1.png)![](2017-week-32_files/figure-markdown_github/unnamed-chunk-3-2.png)![](2017-week-32_files/figure-markdown_github/unnamed-chunk-3-3.png)
 
-All states except for 2 made improvements in sanitation. One of the two states saw regression in both all toilets and toilets for women. The other state only saw regression in overall toilets, but saw improvement in toilets for women.
+All states except for 2 made improvements in sanitation. One of the two states saw regression in both all toilets and toilets for girls. The other state only saw regression in overall toilets, but saw improvement in toilets for girls.
 
 There was a negative or flat correlation between the percent of usable toilets in 2010 and the improvement seen between 2010 and 2016. There was a positive correlation between the percent of usable toilets in 2016 and the improvement seen between 2010 and 2016. The latter observation makes sense given that the value in 2016 depends in part on the improvement over that period.
 
